--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,2 +1,9 @@
 <h1>{{title}}</h1>
-<app-user></app-user>
+<nav>
+    <a routerLink="/users">Table</a>
+    <a routerLink="/users2">Bootstrap Grid</a>
+    <a routerLink="/users">Create user</a>
+    <a routerLink="/users2">Show certain user</a>
+  </nav>
+<router-outlet> </router-outlet>
+<!-- <app-user-list></app-user-list> -->
