--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1>{{title}}</h1>
 <nav>
-    <a routerLink="/users">Table</a>
-    <a routerLink="/users2">Bootstrap Grid</a>
-    <a routerLink="/users">Create user</a>
-    <a routerLink="/users2">Show certain user</a>
-  </nav>
+  <input routerLink="/users" class="btn btn-primary actionButton" type="button" value="Table">
+  <input routerLink="/users2" class="btn btn-primary actionButton" type="button" value="div's">
+  <input routerLink="/create-user" class="btn btn-primary actionButton" type="button" value="Create user">
+  <input routerLink="/users2" class="btn btn-primary actionButton" type="button" value="Show certain user">
+</nav>
 <router-outlet> </router-outlet>
 <!-- <app-user-list></app-user-list> -->
