--- a/Client/src/app/user/components/delete-user/delete-user.component.html
+++ b/Client/src/app/user/components/delete-user/delete-user.component.html
@@ -4,4 +4,4 @@
 <div class="modal-body">
   <p>Are you sure to delete this user?</p>
 </div>
-  <button type="button" class="btn btn-outline-dark" (click)="deleteUser()">Yes</button>
+  <button type="button" class="btn btn-outline-dark" (click)="deleteUser(id)">Yes</button>
