--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -3,7 +3,7 @@
   <input routerLink="/users" class="btn btn-primary actionButton" type="button" value="Table">
   <input routerLink="/users2" class="btn btn-primary actionButton" type="button" value="div's">
   <input routerLink="/create-user" class="btn btn-primary actionButton" type="button" value="Create user">
-  <input routerLink="/users2" class="btn btn-primary actionButton" type="button" value="Show certain user">
+  <input routerLink="/get-user" class="btn btn-primary actionButton" type="button" value="Show certain user">
 </nav>
 <router-outlet> </router-outlet>
 <!-- <app-user-list></app-user-list> -->
