--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
   <input routerLink="/users" class="btn btn-primary actionButton" type="button" value="Table">
-  <input routerLink="/users2" class="btn btn-primary actionButton" type="button" value="div's">
+  <input routerLink="/users2" class="btn btn-primary actionButton" type="button" value="Users in div's">
   <input routerLink="/create-user" class="btn btn-primary actionButton" type="button" value="Create user">
   <input routerLink="/get-user" class="btn btn-primary actionButton" type="button" value="Show certain user">
 </nav>
